terraform/k8s.tf
resource "kubernetes_namespace" "omegaup" {
  metadata {
    name = "omegaup"
  }
}
